Fix Binder html rendering

--- a/Capítulo 02 - Variáveis, expressões e instruções.ipynb
+++ b/Capítulo 02 - Variáveis, expressões e instruções.ipynb
@@ -69,7 +69,7 @@
       "source": [
         ">>> message = 'And now for something completely different'"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
       "source": [
         ">>> n = 17"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
       "source": [
         ">>> pi = 3.141592653589793"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,10 +115,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "XgLpYM_g1HeX"
+        "id": "2UA_jBL1_GZC"
       },
       "source": [
-        "<center><image src=\"https://github.com/PenseAllen/PensePython2e/raw/master/fig/tnkp_0201.png\"></center>"
+        "![](https://github.com/PenseAllen/PensePython2e/raw/master/fig/tnkp_0201.png)"
       ]
     },
     {
@@ -179,16 +179,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "l2PDG1W22AKu",
-        "outputId": "359245d0-99b9-4767-c991-c42b37d087ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 130
-        }
+        },
+        "outputId": "359245d0-99b9-4767-c991-c42b37d087ad"
       },
       "source": [
         ">>> 76trombones = 'big parade"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -204,16 +204,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "24g7ZNyE2MMA",
-        "outputId": "51584348-2849-4dc9-8e7f-edbf00d4b36f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 130
-        }
+        },
+        "outputId": "51584348-2849-4dc9-8e7f-edbf00d4b36f"
       },
       "source": [
         "mais@ = 1000000"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -229,16 +229,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "n1hHqbEc2pLC",
-        "outputId": "605493c1-873a-490e-c52c-02c4d2251e6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 130
-        }
+        },
+        "outputId": "605493c1-873a-490e-c52c-02c4d2251e6e"
       },
       "source": [
         "class = 'Advanced Theoretical Zymurgy'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -278,60 +278,20 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "E_eGLFNY1Heb"
+        "id": "T0u0rfyI8E3B"
       },
       "source": [
-        "<table>\n",
-        "  <tr>\n",
-        "    <th>and</th>\n",
-        "    <th>del</th>\n",
-        "    <th>from</th>\n",
-        "    <th>None</th>\n",
-        "    <th>True</th>\n",
-        "  </tr>\n",
-        "  <tr>\n",
-        "    <th>as</th>\n",
-        "    <th>elif</th>\n",
-        "    <th>global</th>\n",
-        "    <th>nonlocal</th>\n",
-        "    <th>try</th>\n",
-        "  </tr>\n",
-        "  <tr>\n",
-        "    <th>assert</th>\n",
-        "    <th>else</th>\n",
-        "    <th>if</th>\n",
-        "    <th>not</th>\n",
-        "    <th>while</th>\n",
-        "  </tr>\n",
-        "  <tr>\n",
-        "    <th>break</th>\n",
-        "    <th>except</th>\n",
-        "    <th>import</th>\n",
-        "    <th>or</th>\n",
-        "    <th>with</th>\n",
-        "  </tr>\n",
-        "  <tr>\n",
-        "    <th>class</th>\n",
-        "    <th>False</th>\n",
-        "    <th>in</th>\n",
-        "    <th>pass</th>\n",
-        "    <th>yield</th>\n",
-        "  </tr>\n",
-        "  <tr>\n",
-        "    <th>continue</th>\n",
-        "    <th>finally</th>\n",
-        "    <th>is</th>\n",
-        "    <th>raise</th>\n",
-        "  </tr>\n",
-        "  <tr>\n",
-        "    <th>def</th>\n",
-        "    <th>for</th>\n",
-        "    <th>lambda</th>\n",
-        "    <th>return</th>\n",
-        "  </tr>\n",
-        "</table>"
+        "| - | - | - | - | -|\n",
+        "| --- | --- | --- | --- | ---|\n",
+        "| and | del | from | None | True |\n",
+        "| as | elif | global | nonlocal | try |\n",
+        "| assert | else | if | not | while |\n",
+        "| break | except | import | or | with |\n",
+        "| class | False | in | pass | yield |\n",
+        "| continue | finally | is | raise | |\n",
+        "| del | for | lambda | return | |\n"
       ]
     },
     {
@@ -376,15 +336,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "q4EIhDmt1Hec",
-        "outputId": "a5f46cb3-b316-412c-94d8-bc1783bc2167",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a5f46cb3-b316-412c-94d8-bc1783bc2167"
       },
       "source": [
         ">>> n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -402,15 +362,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "FzLGu1v81Hec",
-        "outputId": "cf7988cd-cfe9-46b0-84ef-d9ed91307b1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cf7988cd-cfe9-46b0-84ef-d9ed91307b1d"
       },
       "source": [
         ">>> n + 25"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,22 +410,22 @@
       "source": [
         ">>> n = 17"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "67FQ_6GJ1Hed",
-        "outputId": "7becdd5a-be11-4423-bc74-881db5705720",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7becdd5a-be11-4423-bc74-881db5705720"
       },
       "source": [
         ">>> print(n)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -553,16 +513,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "1E8wG6Zu1Hee",
-        "outputId": "7b18f02c-1228-4481-ec06-c838e7f63fc4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7b18f02c-1228-4481-ec06-c838e7f63fc4"
       },
       "source": [
         ">>> miles = 26.2\n",
         ">>> miles * 1.61"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,16 +551,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "GDR-1ztQ1Hef",
-        "outputId": "2c497ac6-7c08-4e2a-f6e2-405c25b46884",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2c497ac6-7c08-4e2a-f6e2-405c25b46884"
       },
       "source": [
         "miles = 26.2\n",
         "print (miles * 1.61)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,17 +633,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "-BbwAV5e1Heg",
-        "outputId": "0fb45d4b-77fe-4979-803e-167e0d98b117",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0fb45d4b-77fe-4979-803e-167e0d98b117"
       },
       "source": [
         ">>> 5\n",
         ">>> x = 5\n",
         ">>> x + 1"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -780,18 +740,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "KtiZyp371Heh",
-        "outputId": "d177bdc1-9dbd-4efc-af8f-e4bca7be35cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "d177bdc1-9dbd-4efc-af8f-e4bca7be35cd"
       },
       "source": [
         "first = 'papa'\n",
         "second = 'capim'\n",
         "first + second"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
